[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/chat.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="ChatUI" type="Panel"]
margin_left = 32.0
margin_top = 414.0
margin_right = 281.0
margin_bottom = 586.0
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Rows" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Messages" type="RichTextLabel" parent="Rows"]
margin_right = 245.0
margin_bottom = 140.0
focus_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="SendRow" type="HBoxContainer" parent="Rows"]
margin_top = 144.0
margin_right = 245.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageInput" type="LineEdit" parent="Rows/SendRow"]
margin_right = 198.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="Rows/SendRow"]
margin_left = 202.0
margin_right = 245.0
margin_bottom = 24.0
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="Rows/SendRow/MessageInput" to="." method="_on_MessageInput_text_entered"]
[connection signal="pressed" from="Rows/SendRow/SendButton" to="." method="_on_SendButton_pressed"]
